--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -1,8 +1,3 @@
-- name: application installs
-  include: apps.yml 
+- name: install applications
+  include: applications.yml
 
-- name: configuration
-  include: configuration.yml
-
-- name: dotfiles
-  include: dotfiles.yml
