--- a/roles/setup/vars/main.yml
+++ b/roles/setup/vars/main.yml
@@ -1,52 +1,22 @@
 ---
-# list of applications to install
-general:
-  local_home: "{{ lookup('env','HOME') }}"
 
-# homebrew applications
 applications:
-  - autojump
-  - git
-  - tree
-  - httpie
-  - curl
-  - wget
-  - kubectl
-  - kubernetes-helm
-  - zsh
-  - go
-  - vim
-  - hugo
-  - saltstack
-  - neovim
-  - ag 
-  - ctags
-  - terraform
-
-# homebrew cask applications
+ - git
+ - ansible
+ - zsh
+ - tree
+ - curl
+ - wget
+ - httpie
+ - ag
+ - asdf
+ - yarn
+ 
 cask_applications:
-  - google-chrome
-  - slack
-  - iterm2
-  - caffeine
-  - docker
-  - minikube
-  - vagrant
-  - emacs
-  - garmin-express
-  - 1password
-  - alfred
-  - virtualbox
-  - spotify
-  - steam
-
-downloads:
-   zwift:
-     name: Zwift
-     url: http://cdn.zwift.com/app/ZwiftOSX.dmg
-     dest: "{{general.local_home}}/Downloads/ZwiftOSX.dmg"
-   suuntolink:
-     name: Suunto Movescount link
-     url: http://suuntolink.static.movescount.com/Suuntolink_installer.dmg
-     dest: "{{general.local_home}}/Downloads/Suuntolink_installer.dmg"
+ - spotify
+ - iterm2
+ - google-chrome
+ - docker
+ - homebrew/cask-versions/firefox-developer-edition
+ - visual-studio-code
 
