--- a/roles/setup/tasks/configurations.yml
+++ b/roles/setup/tasks/configurations.yml
@@ -9,3 +9,6 @@
 
 - name: set default shell to zsh
   shell: chsh -s $(which zsh)
+
+- name: add oh-my-zsh
+  shell: sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
